# dependabot-configurator

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: .configurator_settings.yml  CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-configurator-reusable-workflow.yml  dependabot-configurator.yml.disabled  dependabot-security-reviewers-bridge-reusable.yml  dependabot-security-reviewers-bridge.yml  dependabot-security-reviewers.yml  pr-checks.yml  pre-commit.yml
app/dependabot-configurator/: __init__.py  generate.py  pinact.py  pyproject.toml
app/dependabot-configurator/tests/: test_generate.py  test_pinact.py
templates/workflows/: dependabot-configurator.yml  dependabot-security-reviewers.yml
