[project]
name = "dependabot-configurator"
version = "0.1.0"
description = "An easy tool to automatically optimize and maintain Dependabot configurations"
authors = [
    {name = "matt.mckinley@redcanary.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "structlog (>=24.2.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
